--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,17 @@ dependencies:
   retrofit: ^4.4.0
   logger: ^2.4.0 # for logging purpose
   json_annotation: ^4.9.0
+  drift: ^2.22.1
+  drift_flutter: ^0.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
   retrofit_generator: ">=8.0.0 <10.0.0" # for Dart 3.3 use ^9.0.0
-  build_runner: ^2.3.3
+  build_runner: ^2.4.13
   json_serializable: ^6.8.0
+  drift_dev: ^2.22.1
 
 flutter:
   uses-material-design: true
