--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   json_annotation: ^4.9.0
   drift: ^2.22.1
   drift_flutter: ^0.2.3
+  sqlite3: ^2.5.0
 
 dev_dependencies:
   flutter_test:
